<resources>
    <string name="app_name">Bone Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">尚未登入</string>
    <string name="nav_header_email"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_login">登入</string>
    <string name="menu_signup">註冊</string>
    <string name="menu_logout">登出</string>
    <string name="login">登入</string>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="create_Signup">建立一個新的帳戶</string>
    <string name="signup">註冊</string>
    <string name="login_here">立即登入</string>
    <string name="fullname">使用者名稱</string>
    <string name="email">Email / 電子信箱</string>
    <string name="create_new">建立一個新的帳戶</string>
    <string name="menu_dashhome">DashHome</string>
    <string name="logout_Str">確定要登出嗎??</string>

    <string name="nav_record">消費紀錄</string>
    <string name="nav_search">搜尋頁面</string>
    <string name="nav_bank">個人帳戶</string>
    <string name="nav_bottom_category">店家種類</string>
    <string name="go_back_category">返回</string>


    <string-array name="store_category">
        <item>全部</item>
        <item>麵食</item>
        <item>炒飯</item>
        <item>早午餐</item>
        <item>火鍋</item>
        <item>炸物</item>
        <item>滷味</item>
        <item>餃類</item>
    </string-array>


    <string-array name="my_budget_select">
        <item>無上限</item>
        <item>0~49</item>
        <item>50~99</item>
        <item>100~200</item>
        <item>200~300</item>
        <item>300~400</item>
        <item>500 up</item>
    </string-array>


</resources>