<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_groups_black_18dp"
            android:title="關於我們" />

        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/baseline_restaurant_black_18dp"
            android:title="午餐建議" />

    </group>


    <item android:title="使用者介面">
        <menu>
            <item
                android:id="@+id/nav_signup"
                android:icon="@drawable/baseline_design_services_black_18dp"
                android:title="@string/menu_signup" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_power_settings_new_black_18dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>



</menu>